# ccliveplayer_android

./: Android.mk  Application.mk  CMakeLists.txt  README.md
ffmpeg/: CMakeLists.txt
ffmpeg/include/libffmpeg/: config.h
ffmpeg/include/openssl/: opensslconf.h
ijkmedia/: CMakeLists.txt
ijkmedia/ijkplayer/: Android.mk  Android.mk_as  Android.mk_ecl  CMakeLists.txt  ff_cmdutils.c  ff_cmdutils.h  ff_fferror.h  ff_ffinc.h  ff_ffmsg.h  ff_ffmsg_queue.h  ff_ffpipeline.c  ff_ffpipeline.h  ff_ffpipenode.c  ff_ffpipenode.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ff_ffplay_options.h  ff_file_saver.c  ff_file_saver.h  ijkmeta.c  ijkmeta.h  ijkplayer.c  ijkplayer.h  ijkplayer_internal.h
ijkmedia/ijkplayer/android/: ijkplayer_android.c  ijkplayer_android.h  ijkplayer_android_def.h  ijkplayer_jni.c
ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipeline_android.h  ffpipenode_android_mediacodec_vdec.c  ffpipenode_android_mediacodec_vout.c  h264_nal.h  hevc_nal.h  mpeg4_esds.h
ijkmedia/ijkplayer/ijk4a/: j4a_base.c
ijkmedia/ijkplayer/ijkavformat/: allformats.c  ijkmediadatasource.c
ijkmedia/ijkplayer/pipeline/: ffpipeline_ffplay.c  ffpipenode_ffplay_vdec.c  ffpipenode_ffplay_vout.c
ijkmedia/ijksdl/: Android.mk_as  Android.mk_ecl  CMakeLists.txt  ijksdl_aout.c  ijksdl_aout.h  ijksdl_egl.c  ijksdl_fourcc.h  ijksdl_log.h  ijksdl_misc.h  ijksdl_thread.c  ijksdl_timer.c  ijksdl_timer.h  ijksdl_vout.c  ijksdl_vout.h  ijksdl_vout_internal.h
ijkmedia/ijksdl/android/: android_audiotrack.c  android_audiotrack.h  android_nativewindow.c  android_vout_gles.c  android_vout_gles.h  ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_aout_android_audiotrack.c  ijksdl_codec_android_mediacodec.c  ijksdl_codec_android_mediacodec.h  ijksdl_codec_android_mediacodec_dummy.c  ijksdl_codec_android_mediacodec_java.c  ijksdl_codec_android_mediacodec_java.h  ijksdl_codec_android_mediaformat_java.c  ijksdl_codec_android_mediaformat_java.h  ijksdl_vout_android_nativewindow.c  ijksdl_vout_android_nativewindow.h  ijksdl_vout_android_surface.c  ijksdl_vout_android_surface.h  ijksdl_vout_overlay_android_mediacodec.c  ijksdl_vout_overlay_android_mediacodec.h
ijkmedia/ijksdl/ffmpeg/: ijksdl_image_convert.h  ijksdl_vout_overlay_ffmpeg.c  ijksdl_vout_overlay_ffmpeg.h
ijkmedia/ijksdl/gles2/: internal.h  renderer.c  renderer_yuv420sp_vtb.m
ijkmedia/ijksoundtouch/: CMakeLists.txt
ijkmedia/ijksoundtouch/source/Android-lib/res/layout/: activity_example.xml
ijkmedia/ijkutil/: CMakeLists.txt
ijkmedia/ijkutil/android/: jnihelp.c  loghelp.h
ijkmedia/ijkutil/ios/: loghelp.h
ijkmedia/ijkyuv/: CMakeLists.txt
